--- a/plugin/package.json
+++ b/plugin/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "@types/node": "^20.11.16",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2"
   }
 }
